<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_1" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="50dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/button_login"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSenha" />


    <Button
        android:id="@+id/button_newAccount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/button_login"
        android:text="@string/newAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>